x86: AVX2 versions of vpxor should be asserted

XMLWordPrintable

    • b05

        Got the SIGILLs on some machines when testing JDK-8279621. That patch started using shorter vpxor versions on UseAVX = 1 path, which tried to use VEX.256-encoded vpxor instruction that is only available on AVX2. This should be at very least asserted in assembler code.

              Assignee:
              Aleksey Shipilev
              Reporter:
              Aleksey Shipilev
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

                Created:
                Updated:
                Resolved: