8279668: x86: AVX2 versions of vpxor should be asserted

Reviewed-by: goetz
Backport-of: 2bbeae3f056243a224b0bda021f16cdcbee3b3d6